# latex2pdfa

./: .gitignore  README.md  pyproject.toml  requirements.txt
binaries/ghostscript/: Licence
resources/: sample.xmpdata
src/latex2pdfa/: __init__.py  latex2pdfa.py  utils.py
src/latex2pdfa/resources/: PDFA_def.ps  lib_PDFA_def.ps
tests/sample_project/: article.tex  article.tex.backup  article.xmpdata  pdfa.xmpi
